@@ -1,3 +1,8 @@
+2011-06-09 Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V00-01-00
+	* iChoke functionality
+	
 2011-03-21 Emilio Meschi <emilio.meschi@cern.ch>
 
 	* tag V00-00-10
